Improved styling & fix overflow in sidebar items

--- a/app/client/components/NavGroupItem/styles.scss
+++ b/app/client/components/NavGroupItem/styles.scss
@@ -3,13 +3,23 @@
   display: flex;
   flex-direction: row;
 
+  span {
+    flex-shrink: 0;
+  }
+  
+  .text {
+    flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &.indicator {
     padding-left: 0;
 
     .icon.icon-record {
       font-size: 12px;
-      margin-left: 4px;
-      margin-right: 2px;
+      padding-left: 4px;
+      padding-right: 2px;
     }
   }
 }
