--- a/app/client/containers/FolderIgnores/styles.scss
+++ b/app/client/containers/FolderIgnores/styles.scss
@@ -9,9 +9,6 @@
     display: flex;
     flex-direction: column;
 
-    label {
-    }
-
     textarea {
       resize: none;
       min-height: 100px;
